Add html content to hero and newsletter

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -41,9 +41,26 @@
 <main>
 
   <section>
-  </section
+    <div class="content-wrapper">
+        <h1> Retreat from the desk, return refreshed.</h1>
+        <figure>
+          <img src="img/hero.png" target="_blank">
+        </figure>
+      </div>
+  </section>
 
   <aside>
+    <div class="content-wrapper">
+      <h2>Want to join the next retreat?</h2>
+
+      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+
+      <h2>Find out more</h2>
+
+      <input type="text" name="name" value="email address">
+      <input type="button" value="Download Itinerary">
+
+    </div>
   </aside>
 
 </main>
