Matching sample code names and format

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
   <!-- Add your site or application content here -->
 <header>
   <div class="content-wrapper">
-      <a href="#"><img src="" alt="unplugged logo"></a>
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
       <div class="header-divider"></div>
       <nav>
            <ul>
@@ -40,25 +42,28 @@
 
 <main>
 
-  <section>
+  <section class="hero-area">
     <div class="content-wrapper">
         <h1> Retreat from the desk, return refreshed.</h1>
-        <figure>
-          <img src="img/hero.png" target="_blank">
-        </figure>
       </div>
   </section>
 
   <aside>
     <div class="content-wrapper">
-      <h2>Want to join the next retreat?</h2>
+      <div class="form-description">
 
-      <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+        <h3>Want to join the next retreat?</h3>
+        <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
 
-      <h2>Find out more</h2>
+      </div>
 
-      <input type="text" name="name" value="email address">
-      <input type="button" value="Download Itinerary">
+      <div class="form">
+
+        <h3>Find out more</h3>
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinerary">
+
+      </div>
 
     </div>
   </aside>
@@ -70,7 +75,7 @@
     <div class="footer-content">
 
       <div class="contact">
-        <h1>Contact</h1>
+        <h4>Contact</h4>
         <address>
           555-555-5555 <br>
           hello@unplugged.com
@@ -79,7 +84,7 @@
 
       <div class="social">
           <div class="social-icons">
-            <h1>Social</h1>
+            <h4>Social</h4>
             <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
             <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
             <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
