--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,11 +40,50 @@
 
   <main>
 
-    <section>
-    </section
+    <section class="mission">
+      <div class="content-wrapper">
+        <h1>Our Mission - we want to make you the team you always wanted to be.</h1>
+        <div class="mission-content">
 
-    <aside>
-    </aside>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+        </div>
+      </div> <!-- mission content wrapper ends -->
+    </section> <!-- mission-info -->
+
+    <section class="map">
+      <article>
+        <!-- map goes here -->
+      </article>
+    </section>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+
+        <h1>Contact us, because you all need this.</h1>
+
+        <address>
+        <div>
+          <h3>General Information</h3>
+          <p>
+            333 Main St, Lake Geneva, WI 53147<br>
+            555-555-5555<br>
+            hello@unplugged.com
+          </p>
+        </div>
+
+        <div>
+          <h3>Chat with a Facilitator</h3>
+          <p>
+            555-555-5556<br>
+            facilitator@unplugged.com
+          </p>
+        </div>
+      </address>
+
+      </div>
+    </section>
 
   </main>
 
