--- a/faq/index.html
+++ b/faq/index.html
@@ -32,7 +32,7 @@
         <nav>
              <ul>
                  <li><a href="index.html" target="_blank">FAQ</a></li>
-                 <li><a href="../about/index.html" target="_blank">About</a></li>
+                 <li><a href="..about/index.html" target="_blank">About</a></li>
              </ul>
         </nav>
     </div>
@@ -40,11 +40,40 @@
 
   <main>
 
-    <section>
-    </section
+    <section class="faq">
+      <div class="content-wrapper">
+        <h2>Frequently Asked Questions</h2>
 
-    <aside>
-    </aside>
+        <div class="faq-content">
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+
+        <div class="faq-content">
+          <h4>What kind of team is right for the Unplugged retreat?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+
+        <div class="faq-content">
+          <h4>What size teams can you accommodate?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
+          </p>
+        </div>
+
+        <div class="faq-content">
+          <h4>Is there really no wifi available?</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+          </p>
+        </div>
+
+    </section> <!-- faq-info -->
+
 
   </main>
 
@@ -53,7 +82,7 @@
       <div class="footer-content">
 
         <div class="contact">
-          <h1>Contact</h1>
+          <h4>Contact</h4>
           <address>
             555-555-5555 <br>
             hello@unplugged.com
@@ -61,8 +90,8 @@
         </div>
 
         <div class="social">
+            <h4>Social</h4>
             <div class="social-icons">
-              <h1>Social</h1>
               <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
               <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
               <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
@@ -77,7 +106,6 @@
     </div>
 
   </footer>
-
 
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
