--- a/faq/index.html
+++ b/faq/index.html
@@ -32,7 +32,7 @@
         <nav>
              <ul>
                  <li><a href="index.html" target="_blank">FAQ</a></li>
-                 <li><a href="..about/index.html" target="_blank">About</a></li>
+                 <li><a href="../about/index.html" target="_blank">About</a></li>
              </ul>
         </nav>
     </div>
@@ -68,7 +68,7 @@
         <div class="faq-content">
           <h4>Is there really no wifi available?</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.  
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
           </p>
         </div>
 
