Checking work, matching sample code

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <div class="content-wrapper">
       <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
 
+      <div class="features-items">
       <article>
         <p class="fontawesome-icon"></p>
         <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -101,9 +102,10 @@
         <p class="fontawesome-icon"></p>
         <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
       </article>
+    </div> <!-- features-items-->
 
     </div>
-  </section>
+  </section><!--features-->
 
 
   <section class="reviews">
