--- a/index.html
+++ b/index.html
@@ -27,16 +27,21 @@
   <!-- Add your site or application content here -->
 <header>
   <div class="content-wrapper">
+
       <a href="#">
         <img src="" alt="unplugged logo">
       </a>
-      <div class="header-divider"></div>
+
+      <div class="header-divider">
+      </div>
+
       <nav>
            <ul>
                <li><a href="faq/index.html" target="_blank">FAQ</a></li>
                <li><a href="about/index.html" target="_blank">About</a></li>
            </ul>
       </nav>
+
   </div>
 </header>
 
@@ -122,7 +127,7 @@
       </article>
 
     </div>
-  </section>
+  </section> <!--.reviews -->
 
 </main>
 
