Add image and format reviews section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
       <h2>Be a better team in 5 days, like this one.</h2>
 
       <article>
+
+        <figure>
+                <a href="">
+                     <img src="img/reviews-img.jpg" alt="Team-building retreat reviews">
+                </a>
+        </figure>
+        
         <div>
           <h3> LaCrue Bottling Co.
               October 2017</h3>
