Add logo image and format for desktop and mobile

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
 <header>
   <div class="content-wrapper">
 
-      <a href="#">
-        <img src="" alt="unplugged logo">
+    <figure>
+      <a href="">
+        <img src="img/unplugged-logo.png" alt="unplugged logo">
       </a>
+    </figure>
 
       <div class="header-divider">
       </div>
@@ -129,7 +131,7 @@
                      <img src="img/reviews-img.jpg" alt="Team-building retreat reviews">
                 </a>
         </figure>
-        
+
         <div>
           <h3> LaCrue Bottling Co.
               October 2017</h3>
