--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 
       <div class="contact">
         <h4>Contact</h4>
-        <address>
+        <address><p>
           555-555-5555 <br>
           hello@unplugged.com
-        </address>
+        </p></address>
       </div>
 
       <div class="social">
