Add map iframe to html and style css

--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,7 @@
 
     <section class="map">
       <figure>
-        <!-- map goes here -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9333.462260615062!2d-69.37787333433702!3d44.28600842965959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2f3484302b6ed5aa!2sThe%20Summer%20Camp!5e0!3m2!1sen!2sus!4v1602444764618!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </figure>
     </section>
 
