--- a/about/index.html
+++ b/about/index.html
@@ -24,6 +24,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
+<!-- Font Awesome Icons -->
+<script src="https://kit.fontawesome.com/940ebf9d5f.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
