Adding social icons to all page footers

--- a/index.html
+++ b/index.html
@@ -165,22 +165,21 @@
 
       <div class="contact">
         <h4>Contact</h4>
-        <address><p>
+        <address>
           555-555-5555 <br>
           hello@unplugged.com
-        </p></address>
+        </address>
       </div>
 
       <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <h4>Social</h4>
-            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
-            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.facebook.com/yoursite" target="_blank"><i class="fab fa-facebook-f"></i></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank"><i class="fab fa-twitter"></i></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank"><i class="fab fa-instagram"></i></a></p>
                 <!-- other social links here -->
           </div>
       </div>
-
     </div> <!-- footer content ends -->
   </div> <!--footer content-wrapper ends-->
 
